# StackMarket

./: .env.dist  .gitignore  Caddyfile  README.md  config.yaml  console.sh  db.io  db_init_temp.sql  docker-compose-dev.yml  docker-compose-prod.yaml  docker-compose.yaml  dump_30-08-2020_15_34_01.sql  package-lock.json  package.json  todo.md  workspace.code-workspace
.github/: workflows
.github/workflows/: deploy.yml
frontend/: .env.dist  .eslintrc.js  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.jsx  Dashboard.js  LandingPage.jsx  ListingPage.jsx  Listings.jsx  StackLogin.jsx  Store.jsx  StoreView.jsx  Topbar.jsx  UserDisplay.jsx  hooks.js  index.js  s3util.js
lemmings/: .env.dist  package-lock.json  package.json  run.sh
lemmings/src/: index.js
metadata/: tables.yaml
migrations/1599001250732_init/: up.sql  up.yaml
migrations/1599438171872_run_sql_migration/: up.sql
migrations/1600209400468_improved_init/: up.sql
migrations/1602974189592_run_sql_migration/: up.sql
migrations/1602974256663_alter_table_public_listing_image_add_column_listing_id/: down.sql  up.sql
migrations/1602974300864_set_fk_public_listing_image_listing_id/: down.sql  up.sql
migrations/1604283161980_create_table_public_resource/: down.sql  up.sql
migrations/1604283183200_create_table_public_image/: up.sql
migrations/1604283211818_set_fk_public_image_id/: down.sql  up.sql
stacklogin/: .env.dist
stackupload/: .env.dist  Cargo.toml  setup.sh
stackupload/src/: main.rs  s3_util.rs
(+39 files in other folders)
