[package]
name = "stackupload"
version = "0.1.0"
authors = ["Mitchell Hynes <me@mitchellhynes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
actix-web = "3"
rust-s3 = "0.23.0"
uuid = { version = "0.8", features = ["v4"] }
rand = "*"
